[gd_scene load_steps=11 format=3 uid="uid://cbkjh6sm3rolt"]

[ext_resource type="SpriteFrames" uid="uid://1kc21pcoj8yj" path="res://Scenes/Boss/boss_orc_minion.tres" id="1_ad0y1"]
[ext_resource type="Script" path="res://Scenes/Boss/minion_orc.gd" id="1_lmyuh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qrfbl"]
radius = 9.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ld7od"]
size = Vector2(19.3182, 55.8824)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2h6r"]
size = Vector2(45.4546, 20.5882)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhw2b"]
size = Vector2(20.4546, 55.8824)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2qq7"]
size = Vector2(47.7273, 22.0588)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jihta"]
radius = 7.0
height = 17.335

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpasl"]
bg_color = Color(0, 0, 0, 0.313726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yf4rg"]
bg_color = Color(0.462745, 0.0313726, 0.0588235, 0.545098)

[node name="MinionOrc" type="CharacterBody2D" groups=["Monsters"]]
y_sort_enabled = true
collision_layer = 4
script = ExtResource("1_lmyuh")
auraType = "none"
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = ExtResource("1_ad0y1")
animation = &"attack_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_qrfbl")

[node name="EnemyHitBox" type="Area2D" parent="."]
position = Vector2(-1, -7)
scale = Vector2(0.879999, 0.68)
collision_layer = 8
collision_mask = 8
metadata/_edit_group_ = true

[node name="CollisionShapeRight" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(23.2955, 2.94118)
scale = Vector2(1, 0.999999)
shape = SubResource("RectangleShape2D_ld7od")

[node name="CollisionShapeBot" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(4.54546, 20.5882)
scale = Vector2(1, 0.999999)
shape = SubResource("RectangleShape2D_m2h6r")

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(-19.3182, 2.94118)
scale = Vector2(1, 0.999999)
shape = SubResource("RectangleShape2D_nhw2b")

[node name="CollisionShapeTop" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(1.54972e-06, -25.7353)
scale = Vector2(1, 0.999999)
shape = SubResource("RectangleShape2D_u2qq7")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(1, 0.922989)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_jihta")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DamagedTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AttackCastingTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AggroTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MonsterHPBar" type="ProgressBar" parent="." groups=["Monsters"]]
offset_left = -8.0
offset_top = -32.0
offset_right = 9.0
offset_bottom = -30.0
theme_override_styles/background = SubResource("StyleBoxFlat_bpasl")
theme_override_styles/fill = SubResource("StyleBoxFlat_yf4rg")
value = 50.0
rounded = true
show_percentage = false

[connection signal="area_entered" from="EnemyHitBox" to="." method="_on_enemy_hit_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="DamagedTimer" to="." method="_on_damaged_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCastingTimer" to="." method="_on_attack_casting_timer_timeout"]
[connection signal="timeout" from="AggroTimer" to="." method="_on_aggro_timer_timeout"]
